add flying bonus

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
             <p class="score-sign">Счет</p>
             <p class="score-num" id="unicorn-score">0</p>
         </div>
-        <div class="bonus-block">
-            <p class="armor-sign">Броня</p>
-            <p class="armor-num" id="armor-score">0</p>
+        <div class="armor-block">
+            <p class="bonus-sign">Броня</p>
+            <p class="bonus-num" id="armor-score">0</p>
+        </div>
+        <div class="fly-block">
+            <p class="bonus-sign">Полет</p>
+            <p class="bonus-num" id="fly-score">0</p>
         </div>
         <div class="menu-wrapper" id="menu-wrapper">
             <ul class="menu" id="menu">
@@ -41,6 +45,10 @@
                 <li class="bonus-menu-item" data-type="armor">
                     <span>Броня</span>
                     <button>200</button>
+                </li>
+                <li class="bonus-menu-item" data-type="flying">
+                    <span>Полет 5 секунд</span>
+                    <button>400</button>
                 </li>
             </ul>
         </div>
