add Armor and Rocket entities

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
     <script src="js/Traits.js"></script>
     <script src="js/chars/Unicorn.js"></script>
     <script src="js/chars/Rainbow.js"></script>
+    <script src="js/chars/Rocket.js"></script>
+    <script src="js/chars/Armor.js"></script>
     <script src="js/chars/EnemyBug.js"></script>
     <script src="js/PlayerController.js"></script>
     <script src="js/main.js"></script>
