--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </h2>
         <div class="hint-block">
             <p>Нажмите P для паузы</p>
+            <p>Нажмите F для полета</p>
         </div>
         <div class="score-block">
             <p class="score-sign">Счет</p>
@@ -55,10 +56,10 @@
     </div>
     <script src="js/constants.js"></script>
     <script src="js/Timer.js"></script>
-    <script src="js/Math.js"></script>
+    <script src="js/math.js"></script>
     <script src="js/Camera.js"></script>
-    <script src="js/ClipBox.js"></script>
-    <script src="js/Spritesheet.js"></script>
+    <script src="js/CLipBox.js"></script>
+    <script src="js/SpriteSheet.js"></script>
     <script src="js/Compositor.js"></script>
     <script src="js/EntityCollider.js"></script>
     <script src="js/Entity.js"></script>
